--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
 	<title>my coursera website</title>
 </head>
 <body>
-<h1> Hello chioma, its a great course</h1>
+<h1> Hello chioma, its a great course... how many pips have u made today?</h1>
+<h2> check ur self</h2>
 </body>
 </html>
